Adding content to main page

--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -42,10 +42,27 @@
 
     </nav>
 
-    section
+    <section id="Filter">
 
 
+    </section>
 
+
+    <section id="Content">
+        <ul>
+            <li>
+               <div class="bg"></div>
+                <p id="title">The Avengers: endGame</p>
+            </li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+    </section>
 
 
 
