--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -54,6 +54,14 @@
                <div class="bg"></div>
                 <p id="title">The Avengers: endGame</p>
             </li>
+            <li><p id="title">Thor</p></li>
+            <li><p id="title">Captain America</p></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
             <li></li>
             <li></li>
             <li></li>
