Added new font to buttons

--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -25,8 +25,8 @@
                 <!--svg hover inspired by https://codepen.io/karimbalaa/pen/qERbBY?editors=110 -->
                 <!--End of Button 1 -->
 
-                <a href="https://twitter.com/Dave_Conner" class="btn btn-2">Movies</a>
-                <a href="https://twitter.com/Dave_Conner" class="btn btn-2">Hover</a>
+                <a href="" class="btn btn-2">Movies</a>
+                <a href="" class="btn btn-2">Hover</a>
                 <!--End of Button 2 -->
 
             </div>
