Created a search system

--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -9,6 +9,9 @@
 
 <body>
 
+  <script src="../node_modules/jquery/dist/jquery.js"></script>
+   <script src="/JavaScript/main.js"></script>
+
     <div id="BackGround">
         <div id="poster">
 
@@ -43,31 +46,21 @@
     </nav>
 
     <section id="Filter">
+        <input type="text" id="searchInput">
 
 
     </section>
 
 
     <section id="Content">
-        <ul>
+        <ul id="listofmovies">
             <li>
                <div class="bg"></div>
                 <p id="title">The Avengers: endGame</p>
             </li>
             <li><p id="title">Thor</p></li>
             <li><p id="title">Captain America</p></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+
         </ul>
 
     </section>
