--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -28,8 +28,8 @@
                 <!--svg hover inspired by https://codepen.io/karimbalaa/pen/qERbBY?editors=110 -->
                 <!--End of Button 1 -->
 
-                <a href="" class="btn btn-2">Movies</a>
-                <a href="" class="btn btn-2">Hover</a>
+                <a href='' class='btn btn-2'>Movies</a>
+                <a href=''class='btn btn-2'>Hover</a>
                 <!--End of Button 2 -->
 
             </div>
@@ -54,8 +54,6 @@
 
     <section id="Content">
         <ul  class="ContentList" id="panel1">
-
-
 
         </ul>
         <!--ul  class="ContentList"id="panel2">
